--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -138,54 +138,58 @@ Second generation problem solvers attempted the same problem solving
 task but starting at where the first generation problem solvers had been
 at the halfway point.
 
-# Experiment 1: Agent-based models {-}
+We wanted to understand the conditions under which inheritance across
+individuals results in performance greater than either individual could achieve
+on their own. We hypothesized that as the could result in performance greater
+than either individual could achieve on their own.
+
+# Experiment 1 {-}
 
 ```{r peaks-setup}
 ```
 
-In Experiment 1, we used agent-based models to simulate the effect of
-inheritance on problem solving performance. We intended to demonstrate how
-skill diversity among generations of problem solvers results in problem
-solving performance that no individual could achieve on their own.
-To test this, we created problem solving agents that varied in skill
-along two independent dimensions. 
-
-
-inheritance can affect future generations of problem solving by starting the
-next generation off in a part of the solution landscape that would be unlikely
-to be reached independently. We predicted that as generations of problem
-solvers increased in skill diversity, the impact of inheritance as a problem
-solving strategy would increase relative to solving the same set of problems as
-individuals.
+In Experiment 1, we used an agent-based model to simulate the effect of
+inheritance on problem solving performance. Agents were assigned skills in two
+independent dimensions. Some agents had equal skill in both dimensions, while
+others had unequal skill, specializing along one dimension at the expense of
+skill in the other. Agents with each type of skill distribution were arranged
+in pairs with other agents, forming two agent teams that varied in overall
+skill distribution. For identical teams, both agents had equal skills along
+both dimensions. For diverse teams, each agent specialized in a different
+skill. We tested whether skill diversity resulted in better problem solving
+performance than equally skilled individuals.
 
 ## Methods {-}
 
 ```{r peaks-methods}
 ```
 
-The models assume that problem solving can be simulated as a process of
-searching a space of possible solutions for better and better answers. To
-simulate inheritance over generations, the best solution discovered by the
-previous generation---a particular point in the space of possible
-solutions---is used as a starting point for the next generation.
+In the simulations, agents completed a problem solving task by searching
+a space of possible solutions, looking for the best ones. Agents navigated the
+solution landscape using a simple hill climbing procedure. For each time step,
+agents randomly sampled a solution within their range of vision (described
+below). If the sampled solution corresponded to a higher position on the
+landscape than the previous best solution, then the agent moved to the new
+position. On the next time step, a solution was sampled relative to the new
+position.
 
-The problem solving agents differed along two dimensions of skill. Each skill
-corresponds to vision in a particular dimension of the solution landscape. All
-agents were allotted the same total amount of skill, which was distributed
-between the two dimensions. Some agents had equal skill in both dimensions,
-and others had unequal skill in either dimension. We predicted the benefits
-of inheritance would be greatest when agents with diverse skills inherit
-from one another.
+Agents were assigned skill values in two dimensions (Fig.
+\@ref(fig:ability-as-vision)). Each skill value corresponded to vision along
+a particular dimension in the solution landscape. All agents were allotted the
+same total amount of skill, which was distributed between the two dimensions.
+Some agents had equal skill in both dimensions, and others had unequal skill in
+either dimension. Agents with equal skill in both dimensions had a square range
+of vision, and could sample equally in any direction. Agents with unequal
+skills had a rectangular range of vision, and were more likely to sample in one
+dimension over the other.
 
-Problem solving agents attempted to find the peak of a solution landscape via a
-random walk process. In the simulations, for each unit of time, the agents
-sampled a random location a fixed distance from the agent's current location.
-This distance is referred to as the agent's search area (Fig.
-\@ref(fig:ability-as-vision)B).
-
-(ref:ability-as-vision) Ability as vision. Teams of two agents could allocate
-the same total skill in different ways. Identical teams shared the same abilities
-in both dimensions. Complementary teams had "equal but opposite" skills.
+(ref:ability-as-vision) Methods for agent-based models. **A.** Each agent was
+assigned skills in two dimensions. **B.** Skill values in both dimensions were
+combined to form each agent's search areas, corresponding to the range of
+solutions that could be sampled relative to any point on the landscape. **C.**
+Teams of two agents differing in skill diversity. Identical teams shared the
+same abilities in both dimensions. Complementary teams had "equal but opposite"
+skills.
 
 ```{r ability-as-vision, fig.width=8, fig.height=8, fig.cap='(ref:ability-as-vision)'}
 grid.arrange(
